--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.cache.redis.time-to-live=60000
 #aws rds settings
 #spring.datasource.url=jdbc:mys//niraj.cychkgoslonz.us-east-2.rds.amazonaws.com:3306/nirajdb
 #spring.datasource.username=admin
-#spring.datasource.password=Niraj123
+#spring.datasource.password=
 
 #H2 DB settings
 #spring.h2.console.enabled=true
