--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,36 @@
+#server.port=5000
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/nirajdb
+#spring.datasource.username=root
+#spring.datasource.password=pass@word1
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
 server.port=5000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/nirajdb
-spring.datasource.username=root
-spring.datasource.password=pass@word1
+spring.datasource.url=jdbc:mysql://aa1m56ktpfqd0tv.c4qppllovnkw.us-west-2.rds.amazonaws.com:3306/imsnirajdb1
+spring.datasource.username=admin
+spring.datasource.password=Niraj123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+
 #Redis Config
 #spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.timeout=6000
-spring.cache.type=REDIS
-spring.cache.redis.cache-null-values=false
-spring.cache.redis.use-key-prefix=true
-spring.cache.redis.key-prefix=library
-spring.cache.redis.time-to-live=60000
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.timeout=6000
+#spring.cache.type=REDIS
+#spring.cache.redis.cache-null-values=false
+#spring.cache.redis.use-key-prefix=true
+#spring.cache.redis.key-prefix=library
+#spring.cache.redis.time-to-live=60000
 
 #redis cache settings
 #spring.cache.type=redis
